[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.25", features = ["derive"] }
derive_more = "0.99.17"
itertools = "0.10.5"
nom = "7.1.1"
rayon = "1.6.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
rustc-hash = "1.1.0"

[profile.release]
debug = true
